--- a/app/src/main/res/layout/activity_penjadwalan_ulang.xml
+++ b/app/src/main/res/layout/activity_penjadwalan_ulang.xml
@@ -137,7 +137,6 @@
                             android:id="@+id/btn_pilih_tanggal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:drawableTop="@drawable/ic_today_black"
                             android:gravity="center"
                             android:text="@string/pilih_tanggal_btn_label"
                             android:theme="@style/WhiteButtonTheme"
@@ -491,7 +490,7 @@
                         app:srcCompat="@drawable/ic_schedule" />
 
                     <TextView
-                        android:id="@+id/tv_kode_matakuliah"
+                        android:id="@+id/tv_kode_matakuliah_baru"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
@@ -514,9 +513,9 @@
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintLeft_toLeftOf="@id/tv_kode_matakuliah"
+                        app:layout_constraintLeft_toLeftOf="@id/tv_kode_matakuliah_baru"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_kode_matakuliah"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_kode_matakuliah_baru"
                         app:layout_constraintVertical_bias="0.0" />
 
                     <View
@@ -1096,7 +1095,7 @@
                         app:srcCompat="@drawable/ic_schedule" />
 
                     <TextView
-                        android:id="@id/tv_kode_matakuliah"
+                        android:id="@+id/tv_kode_matakuliah"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
