--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/colorPrimaryDark" />
+    <item android:drawable="@android:color/white" />
 
     <item>
-        <bitmap android:src="@drawable/logo_sikemas_splash"
+        <bitmap android:src="@drawable/logo_sikemas_v2_splash"
             android:gravity="center" />
 
     </item>
