--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,14 +10,14 @@
     <style name="MyToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppLoginMaterialTheme" parent="SuperMaterialTheme">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textColorPrimary">@color/colorPrimaryText</item>
+        <item name="android:textColorSecondary">@color/colorPrimaryText</item>
+        <item name="android:textColorHint">@color/colorPrimaryDark</item>
 
-        <item name="colorControlHighlight">@color/colorControlHighlight</item>
-        <item name="colorButtonNormal">@color/colorButtonNormal</item>
-        <item name="colorControlActivated">@color/colorControlActivated</item>
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="colorControlActivated">@color/colorPrimaryDark</item>
     </style>
 
     <style name="SuperMaterialTheme" parent="Theme.AppCompat.Light.NoActionBar">
